// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentStepper component matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="stepRoot"
  >
    <div
      class="step stepIncomplete"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-dot-circle fa-w-16 stepIcon"
        data-icon="dot-circle"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm80 248c0 44.112-35.888 80-80 80s-80-35.888-80-80 35.888-80 80-80 80 35.888 80 80z"
          fill="currentColor"
        />
      </svg>
      <div>
        Requested (AE1)
      </div>
      <div
        class="stepRight"
      />
    </div>
    <div
      class="step stepComplete"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-check-circle fa-w-16 stepIcon"
        data-icon="check-circle"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
          fill="currentColor"
        />
      </svg>
      <div>
        Shipped (AS1)
      </div>
      <div>
        some amount of time ago 
      </div>
      <div
        class="stepLeft"
      />
      <div
        class="stepRight"
      />
    </div>
    <div
      class="step stepIncomplete"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-dot-circle fa-w-16 stepIcon"
        data-icon="dot-circle"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm80 248c0 44.112-35.888 80-80 80s-80-35.888-80-80 35.888-80 80-80 80 35.888 80 80z"
          fill="currentColor"
        />
      </svg>
      <div>
        In Transit
      </div>
      <div
        class="stepLeft"
      />
      <div
        class="stepRight"
      />
    </div>
    <div
      class="step stepIncomplete"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-dot-circle fa-w-16 stepIcon"
        data-icon="dot-circle"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm80 248c0 44.112-35.888 80-80 80s-80-35.888-80-80 35.888-80 80-80 80 35.888 80 80z"
          fill="currentColor"
        />
      </svg>
      <div>
        Received (D6T)
      </div>
      <div
        class="stepLeft"
      />
      <div
        class="stepRight"
      />
    </div>
    <div
      class="step stepIncomplete"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-dot-circle fa-w-16 stepIcon"
        data-icon="dot-circle"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm80 248c0 44.112-35.888 80-80 80s-80-35.888-80-80 35.888-80 80-80 80 35.888 80 80z"
          fill="currentColor"
        />
      </svg>
      <div>
        Confirmation (COR)
      </div>
      <div
        class="stepLeft"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DocumentStepperStep component matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="step stepComplete"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-check-circle fa-w-16 stepIcon"
      data-icon="check-circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
        fill="currentColor"
      />
    </svg>
    <div>
      teststep
    </div>
    <div
      class="stepLeft"
    />
    <div
      class="stepRight"
    />
  </div>
</DocumentFragment>
`;
